<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_xl"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/createTeam_nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/createTeam_nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createTeam_hintName"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/createTeam_categoryInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/createTeam_categoryEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createTeam_hintCategory"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/createTeam_clubInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/createTeam_clubEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createTeam_hintClub"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createTeam_createButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/createTeam_create"
        android:textColor="@android:color/white"
        android:enabled="false"/>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>