<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_team"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_xl"
    android:paddingLeft="@dimen/margin_xl"
    android:paddingRight="@dimen/margin_xl"
    android:paddingTop="@dimen/margin_xl"
    tools:context="com.armoz.coachassistant.chooseTeam.activity.ChooseTeamActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fillViewport="true"
            android:id="@+id/teamList"
            android:visibility="gone"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:id="@+id/emptyState"
            android:visibility="gone">

            <TextView
                android:id="@+id/welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:text="@string/choose_team_activity_welcome"
                android:layout_gravity="center"
                android:textSize="@dimen/font_size_xl"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/margin_s"/>

            <TextView
                android:id="@+id/claim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcome"
                android:text="@string/choose_team_claim"
                android:textAlignment="center"
                android:layout_marginBottom="@dimen/margin_xl"/>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:layout_alignParentTop="true"
                app:srcCompat="@drawable/logo"
                android:layout_marginBottom="@dimen/margin_xl"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/claim"
                android:textAlignment="center"
                android:text="@string/choose_team_activity_create_or_select_team"
                android:textStyle="normal|bold" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/createTeamButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/margin_l"
            android:src="@android:drawable/ic_input_add" />


    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
